-
Bug
-
Resolution: Fixed
-
Major
-
None
-
Lustre 2.12.6 + patches
Robinhood
-
3
-
9223372036854775807
When a changelog_catalog become wrapped, "lfs changelog --follow" / "llapi_changelog_recv with CHANGELOG_FLAG_FOLLOW" stop at the last changelog record before the wrapping.
It does not dequeue records at the beginning of changelogs catalogs (in the plain llogs).
This issue has been seen in production with Lustre 2.12.6 and Robinhood.
I have reproduced this issue on Lustre master.
I think this issue could affect some other functionalities that use llog_cat_process with startcat and startidx set (like HSM on master).